# comandas_backend

./: .env  .gitignore  Dockerfile  README.md  comandas_db.db  compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
cert/: cert.csr  cert.pem  ecc-key.pem
src/: dev.py  main.py  settings.py
src/domain/entities/: Cliente.py  ClienteSchema.py  Funcionario.py  FuncionarioSchema.py  Produto.py  ProdutoSchema.py
src/domain/schemas/: AuthSchema.py  ClienteSchema.py  ComandaSchema.py  FuncionarioSchema.py  ProdutoSchema.py  RecebimentoSchema.py
src/infra/: database.py  dependencies.py  rate_limit.py  security.py
src/infra/middleware/: IPAccessMiddleware.py
src/infra/orm/: ClienteModel.py  FuncionarioModel.py  ProdutoModel.py  RecebimentoModel.py
src/routers/: AuditoriaRouter.py  AuthRouter.py  ClienteRouter.py  ComandaRouter.py  FuncionarioRouter.py  HealthRouter.py  ProdutoRouter.py  RecebimentoRouter.py
src/services/: AuditoriaService.py
tests/: TesteCliente.rest  TesteComanda.rest  TesteFuncionario.rest  TesteProduto.rest
