[project]
name = "comandas-backend"
version = "0.1.0"
description = "API FastAPI para gerenciamento de comandas"
requires-python = ">=3.12"
dependencies = [
    "aiomysql",
    "aioquic==1.3.0",
    "aiosqlite==0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==26.1.0",
    "bcrypt==5.0.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "deprecated==1.3.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.14.0",
    "fastar==0.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hypercorn==0.18.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "limits==5.8.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "packaging==26.0",
    "priority==2.0.0",
    "psutil==7.2.2",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pylsqpack==0.3.24",
    "pymssql==2.3.13",
    "pymysql==1.1.2",
    "pyopenssl==26.0.0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "sentry-sdk==2.54.0",
    "service-identity==24.2.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "typer==0.24.1",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "wrapt==2.1.2",
    "wsproto==1.3.2",
]

[project.scripts]
dev = "dev:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["dev", "main", "settings"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["domain*", "infra*", "routers*", "services*"]
namespaces = true
